--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/EagleCommonLib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.guava-19.0.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\EagleOracleBusinessCall\\lib\\guava-19.0.jar
+file.reference.netty-all-4.1.6.Final.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\EagleOms\\lib\\netty-all-4.1.6.Final.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.guava-19.0.jar}
+    ${file.reference.guava-19.0.jar}:\
+    ${file.reference.netty-all-4.1.6.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
