--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,12 @@ dist.jar=${dist.dir}/EagleCommonLib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.guava-19.0.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\EagleOracleBusinessCall\\lib\\guava-19.0.jar
-file.reference.netty-all-4.1.6.Final.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\EagleOms\\lib\\netty-all-4.1.6.Final.jar
+file.reference.netty-all-4.1.13.Final.jar=C:\\Users\\madfooatcom\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\jar\\all-in-one\\netty-all-4.1.13.Final.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.guava-19.0.jar}:\
-    ${file.reference.netty-all-4.1.6.Final.jar}
+    ${file.reference.netty-all-4.1.13.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,6 +54,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.netty-all-4.1.13.Final.jar=C:\\Users\\madfooatcom\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\javadoc\\netty-all-4.1.13.Final-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -72,5 +73,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.netty-all-4.1.13.Final.jar=C:\\Users\\madfooatcom\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\jar\\all-in-one\\netty-all-4.1.13.Final-sources.jar
 src.dir=src
 test.src.dir=test
