--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=EagleCommonLib
+application.vendor=Tareq
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,9 +27,10 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/EagleCommonLib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.guava-19.0.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\EagleOracleBusinessCall\\lib\\guava-19.0.jar
-file.reference.netty-all-4.1.13.Final.jar=C:\\Users\\madfooatcom\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\jar\\all-in-one\\netty-all-4.1.13.Final.jar
+file.reference.netty-all-4.1.13.Final.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\jar\\all-in-one\\netty-all-4.1.13.Final.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -54,7 +56,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.netty-all-4.1.13.Final.jar=C:\\Users\\madfooatcom\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\javadoc\\netty-all-4.1.13.Final-javadoc.jar
+javadoc.reference.netty-all-4.1.13.Final.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\javadoc\\netty-all-4.1.13.Final-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -73,6 +75,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.netty-all-4.1.13.Final.jar=C:\\Users\\madfooatcom\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\jar\\all-in-one\\netty-all-4.1.13.Final-sources.jar
+source.reference.netty-all-4.1.13.Final.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\jar\\all-in-one\\netty-all-4.1.13.Final-sources.jar
 src.dir=src
 test.src.dir=test
