--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -19,8 +19,12 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
@@ -29,17 +33,21 @@ dist.jar=${dist.dir}/EagleCommonLib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.guava-19.0.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\EagleOracleBusinessCall\\lib\\guava-19.0.jar
-file.reference.netty-all-4.1.13.Final.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\jar\\all-in-one\\netty-all-4.1.13.Final.jar
+file.reference.guava-19.0.jar=C:\\Users\\digat\\Documents\\NetBeansProjects\\EagleOracleBusinessCall\\lib\\guava-19.0.jar
+file.reference.java-uuid-generator-3.1.4.jar=C:\\Users\\digat\\Documents\\NetBeansProjects\\CommandCenter\\lib\\java-uuid-generator-3.1.4.jar
+file.reference.netty-all-4.1.52.Final.jar=C:\\Users\\digat\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.52.Final\\jar\\all-in-one\\netty-all-4.1.52.Final.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.guava-19.0.jar}:\
-    ${file.reference.netty-all-4.1.13.Final.jar}
+    ${file.reference.java-uuid-generator-3.1.4.jar}:\
+    ${file.reference.netty-all-4.1.52.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -47,20 +55,24 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.netty-all-4.1.13.Final.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\javadoc\\netty-all-4.1.13.Final-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=EagleCommonLib
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
@@ -71,10 +83,13 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
-source.reference.netty-all-4.1.13.Final.jar=C:\\Users\\Tareq\\Documents\\NetBeansProjects\\DDSLIB\\netty-4.1.13.Final\\jar\\all-in-one\\netty-all-4.1.13.Final-sources.jar
 src.dir=src
 test.src.dir=test
